--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <title>Index Page</title>
 </head>
 <body>
-<h1>Index Page</h1>
+<h1>Data Science Specialization</h1>
+<h2>Developing Data Products</h2>
+<ul>
+<li> <a href=DataProductsWeek2Project.html>Week 2 Project : Vehicle Collisions in 2012</a>
+</ul>
 </body>
 </html>
