--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <h2>Developing Data Products</h2>
 <ul>
 <li> <a href=DataProductsWeek2Project.html>Week 2 Project : Vehicle Collisions in 2012</a>
+<li> <a href=DataProductsWeek3Project.html>Week 3 Project : Vehicle Collisions in 2012</a>
 </ul>
 </body>
 </html>
