Added week 4 project

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <ul>
 <li> <a href=DataProductsWeek2Project.html>Week 2 Project : Vehicle Collisions in 2012</a>
 <li> <a href=DataProductsWeek3Project.html>Week 3 Project : Vehicle Collisions in 2012</a>
+<li> <a href=DataProductsWeek4Project.html>Week 4 Project : Vehicle Collisions Visualization Tool</a>
 </ul>
 </body>
 </html>
