Added week 2 capstone project html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
 <li> <a href=DataProductsWeek3Project.html>Week 3 Project : Vehicle Collisions in 2012</a>
 <li> <a href=DataProductsWeek4Project.html>Week 4 Project : Vehicle Collisions Visualization Tool</a>
 </ul>
+<h2>Capstone Project</h2>
+<ul>
+<li> <a href=CapstoneProjectMilestoneReport.html>Week 2 Project : Milestone Report</a>
+</ul>
 </body>
 </html>
