added capstone project final presentation

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <h2>Capstone Project</h2>
 <ul>
 <li> <a href=CapstoneProjectMilestoneReport.html>Week 2 Project : Milestone Report</a>
+<li> <a href=nGramPredictTextPresentation.html>N-Gram Text Prediction Final Presentation</a>
+<li> <a href=https://nrc2016.shinyapps.io/nGramPredictText/>N-Gram Text Prediction Shiny App</a>
 </ul>
 </body>
 </html>
